--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+spring.datasource.url = ${POSTGRES_JDBC}?currentSchema=listtta
+spring.datasource.username = ${POSTGRES_USER}
+spring.datasource.password = ${POSTGRES_PASSWD}
