--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.datasource.url = jdbc:postgresql://localhost:5432/galaxy?currentSchema=listtta
-spring.datasource.username = foxbat
+spring.datasource.url = ${POSTGRES_JDBC} 
+spring.datasource.username = ${POSTGRES_USER}
 spring.datasource.password = ${POSTGRES_PASSWD}
