--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
-spring.datasource.url = ${POSTGRES_JDBC} 
+spring.datasource.url = ${POSTGRES_JDBC}
 spring.datasource.username = ${POSTGRES_USER}
 spring.datasource.password = ${POSTGRES_PASSWD}
+
+api.security.token.secret = ${JWT_SECRET:my-secret-key}
