--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.username = ${POSTGRES_USER}
 spring.datasource.password = ${POSTGRES_PASSWD}
 
 api.security.token.secret = ${JWT_SECRET:my-secret-key}
+
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=5MB
