Finalização do salvamento da foto de perfil
build.gradle
-> Adicionada dependência "Apache Tika"

UsersController:
-> Verificação de tipo e tamanho da imagem.

UsersDTOAbstrat:
-> Adicionado campos de "profilePicture" e "mimeType".

Mappers:
-> Ignorando profilePicture.

UsersService:
-> Criação do "AddressDTO" refatorada para apenas um método.
-> Encode da foto de perfil para Base64.
-> Fazendo set do MimeType da foto de perfil.

--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
 	implementation 'com.auth0:java-jwt:4.4.0'
 	implementation group: 'br.com.caelum.stella', name: 'caelum-stella-core', version: '2.1.6'
 	 implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	implementation 'org.apache.tika:tika-core:1.4'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.postgresql:postgresql'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
