Geração de senahs e envio de emails
Adiciona a classe RandomPasswordGenerator para geração de senhas aleatórias

- Usa a biblioteca Passay para gerar senhas com regras específicas.
- Gera senhas com 10 caracteres, incluindo:
  - 2 letras minúsculas
  - 2 letras maiúsculas
  - 2 dígitos
  - 2 caracteres especiais (!@#$%^&*()_+)

Adiciona a classe EmailService para envio de emails de senha

- Usa JavaMailSender para enviar emails simples.
- Envia emails com uma senha gerada para novos usuários OAuth.
- Inclui a configuração do remetente através de uma variável de ambiente (LISTTTA_MAIL).

--- a/build.gradle
+++ b/build.gradle
@@ -31,10 +31,12 @@ dependencies {
     implementation 'org.jetbrains:annotations:24.0.0'
 	implementation 'org.jetbrains:annotations:24.0.0'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	implementation 'com.auth0:java-jwt:4.4.0'
 	implementation group: 'br.com.caelum.stella', name: 'caelum-stella-core', version: '2.1.6'
-	 implementation 'org.springframework.boot:spring-boot-starter-actuator'
-	implementation 'org.apache.tika:tika-core:1.4'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	implementation 'org.passay:passay:1.6.4'
+	implementation 'org.apache.tika:tika-core:2.4.1'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.postgresql:postgresql'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
