--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,11 @@ api.security.token.secret = ${JWT_SECRET:my-secret-key}
 
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
+
+#Configuração de email
+spring.mail.host=smtp-mail.outlook.com
+spring.mail.port=587
+spring.mail.username=${LISTTTA_MAIL}
+spring.mail.password=${LISTTTA_MAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
